--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -41,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/user-event": "^14.4.3",
+    "cypress": "^12.9.0"
   }
 }
